--- a/src/main/resources/templates/Query/show.html
+++ b/src/main/resources/templates/Query/show.html
@@ -5,7 +5,7 @@
     <th:block th:include="~{fragments/links}"></th:block>
 
     <title> Фактура </title>
-    <link href="/css/show.css" rel="stylesheet">
+    <link href="/css/invoice.css" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
@@ -30,7 +30,10 @@
                                 <div class="text-container">
                                     <strong class="underlined" th:text="ПОЛУЧАТЕЛ"></strong>
                                     <h5><strong
-                                            th:text="'Име : ' + ${clientDTOS[orderDTO.clientId - 1].businessName}"></strong>
+                                            th:text=" ${clientDTOS[orderDTO.clientId - 1].businessName}"></strong>
+                                    </h5>
+                                    <h5>
+
                                     </h5>
                                     <h5><strong
                                             th:text="'Ид. номер: ' + ${clientDTOS[orderDTO.clientId - 1].idNumEIK}"></strong>
@@ -47,7 +50,10 @@
 
                                 <div class="text-container right">
                                     <strong class="underlined" th:text="ДОСТАВЧИК"></strong>
-                                    <h5><strong th:text="'Име : ' + 'Лукерия ООД'"></strong></h5>
+                                    <h5><strong th:text=" 'Лукерия ООД'"></strong></h5>
+                                    <h5>
+
+                                    </h5>
                                     <h5><strong th:text="'Ид. номер: ' + '200418603'"></strong></h5>
                                     <h5><strong>
                                         <span th:text="'Ид. номер по ДДС: BG' + '200418603'"></span>
@@ -59,7 +65,9 @@
                                 </div>
                             </div>
                             <div class="centered">
-                                <h2 th:text="'Фактура: ' + (${lastInvoiceNumber + 1})+' / '+ ${#dates.format(#dates.createNow(), 'dd.MM.yyyy')}"></h2>
+                                <h2 th:text="'Фактура: ' + (${lastInvoiceNumber + 1})"></h2>
+                                <h2 th:text="'ДАТА: '+ ${#dates.format(#dates.createNow(), 'dd.MM.yyyy')}"></h2>
+
                             </div>
                         </div>
                         <div class="card-body">
@@ -115,10 +123,12 @@
                                         <td></td>
                                         <td></td>
                                         <td></td>
+                                        <td></td>
                                         <td>ДАНЪЧНА УСНОВА (BGN):</td>
                                         <td id="totalPrice"></td>
                                     </tr>
                                     <tr>
+                                        <td></td>
                                         <td></td>
                                         <td></td>
                                         <td></td>
@@ -131,17 +141,24 @@
                                         <td></td>
                                         <td></td>
                                         <td></td>
+                                        <td></td>
                                         <td>СУМА ЗА ПЛАЩАНЕ (BGN):</td>
                                         <td id="paymentAmount"></td>
                                     </tr>
-
                                     </tbody>
                                 </table>
-                                <div class="text-center">
-                                    <a th:if="${orderProductDTOS != null and orderProductDTOS.size() > 0}"
-                                       th:href="@{/}"
-                                       class="btn btn-danger">Фактурирай</a>
-                                </div>
+                                </table>
+                                <form method="post" action="/invoice/submit">
+                                    <input type="text" name="paymentMethod">
+                                    <input type="date" name="dateInput">
+                                    <input type="hidden" id="paymentAmountInput" name="paymentAmount">
+                                    <input type="hidden" id="originalPaymentAmountInput" name="paymentAmount">
+                                    <button type="submit">Изпрати</button>
+                                </form>
+
+                                <label>БАНКОВА СМЕТКА:
+                                    <strong>BG56 UNCR 7000 1523215088 УНИКРЕДИТ БУЛБАНК АД BIC:UNCRBGSF</strong>
+                                </label>
                                 <div class="text-center">
                                     <a th:if="${orderProductDTOS != null and orderProductDTOS.size() > 0}"
                                        th:href="@{/orderProduct/orderDetails/{orderId}(orderId=${orderProductDTOS[0].orderId})}"
@@ -152,10 +169,30 @@
                     </div>
                 </div>
             </div>
-
         </main>
     </div>
 </div>
 </body>
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+    var paymentAmountElement = document.getElementById("paymentAmount");
+    var paymentAmountInput = document.getElementById("paymentAmountInput");
+
+    // Функция за актуализация на стойността в paymentAmountInput
+    function updatePaymentAmountInput() {
+        paymentAmountInput.value = paymentAmountElement.textContent.trim();
+    }
+
+    // Слушател за събитие за промяна на стойността на paymentAmountElement
+    var observer = new MutationObserver(updatePaymentAmountInput);
+    var config = { childList: true, characterData: true, subtree: true };
+    observer.observe(paymentAmountElement, config);
+
+    // Първоначално актуализираме стойността в paymentAmountInput
+    updatePaymentAmountInput();
+});
+
+</script>
+
 <script src="/js/invoice.js"></script>
 </html>
