Add     private BigDecimal totalPrice;         private boolean isCashPayment;         private LocalDate deadline; to createMethod

--- a/src/main/resources/static/css/invoice.css
+++ b/src/main/resources/static/css/invoice.css
@@ -108,4 +108,8 @@ margin: 0 auto; /* Опционално: Центриране на карта х
                        flex-direction: column;
                        margin-bottom: 15px;
                    }
+    .small-input {
+        width: 20px; /* Променете стойностите според вашите нужди */
+    }
+
  }
