--- a/src/main/resources/templates/Query/show.html
+++ b/src/main/resources/templates/Query/show.html
@@ -147,12 +147,19 @@
                                     </tr>
                                     </tbody>
                                 </table>
-                                </table>
                                 <form method="post" action="/invoice/submit">
-                                    <input type="text" name="paymentMethod">
-                                    <input type="date" name="dateInput">
+                                    <div class="form-group">
+                                        <label for="paymentMethod">Начин на плащане:</label>
+                                        <select class="form-control small-input" id="paymentMethod" name="paymentMethod">
+                                            <option value="true">В БРОЙ</option>
+                                            <option value="false">С ПРЕВОДНО НАРЕЖДАНЕ</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="dateInput">Дата на падеж:</label>
+                                        <input class="form-control small-input" type="date" id="dateInput" name="dateInput" value="" min="">
+                                    </div>
                                     <input type="hidden" id="paymentAmountInput" name="paymentAmount">
-                                    <input type="hidden" id="originalPaymentAmountInput" name="paymentAmount">
                                     <button type="submit">Изпрати</button>
                                 </form>
 
@@ -173,27 +180,5 @@
     </div>
 </div>
 </body>
-<script>
-document.addEventListener("DOMContentLoaded", function () {
-    var paymentAmountElement = document.getElementById("paymentAmount");
-    var paymentAmountInput = document.getElementById("paymentAmountInput");
-
-    // Функция за актуализация на стойността в paymentAmountInput
-    function updatePaymentAmountInput() {
-        paymentAmountInput.value = paymentAmountElement.textContent.trim();
-    }
-
-    // Слушател за събитие за промяна на стойността на paymentAmountElement
-    var observer = new MutationObserver(updatePaymentAmountInput);
-    var config = { childList: true, characterData: true, subtree: true };
-    observer.observe(paymentAmountElement, config);
-
-    // Първоначално актуализираме стойността в paymentAmountInput
-    updatePaymentAmountInput();
-});
-
-</script>
-
 <script src="/js/invoice.js"></script>
-<script src="/js/app.js"></script>
 </html>
