--- a/src/main/resources/templates/Package/create.html
+++ b/src/main/resources/templates/Package/create.html
@@ -40,7 +40,7 @@
                         <h5 class="card-title mb-0">Създай Кутия</h5>
                     </div>
                     <div class="card-body">
-                        <form th:action="/package/submit" method="post" enctype="multipart/form-data">
+                        <form th:action="@{/package/submit}" method="post" enctype="multipart/form-data">
                             <div class="form-group">
                                 <label for="name">Име:</label>
                                 <input type="text" id="name" name="name" pattern=".{10,}"
