--- a/src/main/resources/templates/Package/show.html
+++ b/src/main/resources/templates/Package/show.html
@@ -77,7 +77,9 @@
                                         <td th:text="${package.cartonId}"></td>
                                         <td th:text="${package.plateId}"></td>
                                         <td th:text="${package.piecesCarton}"></td>
-                                        <td th:text="${package.photo}"></td>
+                                        <td>
+                                         <img th:src="@{${backendBaseUrl} + '/'+ ${package.photo}}" alt="profile image" height="100" width="100">
+                                        </td>
                                         <td>
                                             <form th:action="@{'/package/delete/' + ${package.id}}" method="post" th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете пакет с име: ' + ${package.name} + '?\');'">
                                                 <button type="submit" class="btn btn-danger">Изтрий</button>
