add Page to see created Invoice

--- a/src/main/resources/templates/Product/show.html
+++ b/src/main/resources/templates/Product/show.html
@@ -23,10 +23,10 @@
                 <div class="col-lg-8 mx-auto">
                     <div class="card custom-card-width-lg">
                         <div class="card-header">
-                            <h5 class="card-title mb-0">Всички Потребители</h5>
+                            <h5 class="card-title mb-0">Всички Продукти</h5>
                         </div>
                         <div class="text-center">
-                            <a href="/user/create" class="btn btn-primary">Добави Потребител</a>
+                            <a href="/product/create" class="btn btn-primary">Добави Продукти</a>
                         </div>
                         <div class="card-body">
                             <div class="row mb-3">
