--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -60,6 +60,11 @@
                 </a>
             </li>
             <li class="sidebar-item">
+                <a id="nav-show9" class="sidebar-link" href="/invoice/showAllInvoices">
+                    <i class="align-middle" data-feather="shopping-bag"></i> <span class="align-middle">Фактури</span>
+                </a>
+            </li>
+            <li class="sidebar-item">
                 <a id="nav-show4" class="sidebar-link" href="/material-order/show">
                     <i class="align-middle" data-feather="shopping-bag"></i> <span class="align-middle">Поръчки на материали</span>
                 </a>
