edit package photo functionality

--- a/src/main/resources/templates/Package/create.html
+++ b/src/main/resources/templates/Package/create.html
@@ -76,7 +76,7 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="photo">Photo:</label>
+                                <label for="photo">Снимка:</label>
                                 <input type="file" id="photo" name="file" />
                             </div>
                             <div class="text-center">
