--- a/src/main/resources/templates/Invoice/ShowId.html
+++ b/src/main/resources/templates/Invoice/ShowId.html
@@ -102,22 +102,11 @@
                                                     th:if="${packageDTO.id == orderProductDTO.packageId}"
                                                     th:text="${packageDTO.name}"></span>
                                         </td>
-                                        <td>
-                                            <label>
-                                                <input class="quantity-input" type="number"
-                                                       th:value="${orderProductDTO.number}" min="1">
-                                            </label>
+                                        <td class="quantity-input" th:text="${orderProductDTO.number}">
                                             <span> БР</span>
                                         </td>
 
-                                        <td>
-                                            <label>
-                                                <input type="number" step="0.01" class="price-input"
-                                                       data-value="${productDTOS[__${orderProductDTO.packageId - 1}__].price}"
-                                                       th:value="${productDTOS[__${orderProductDTO.packageId - 1}__].price}"
-                                                       placeholder="${productDTOS[__${orderProductDTO.packageId - 1}__].price}"
-                                                       size="5">
-                                            </label>
+                                        <td  class="price-input" th:text="${productDTOS[__${orderProductDTO.packageId - 1}__].price}">
                                         </td>
                                         <td th:text="20"></td>
                                         <td>
@@ -133,7 +122,7 @@
                                         <td></td>
                                         <td></td>
                                         <td></td>
-                                        <td>ДАНЪЧНА УСНОВА (BGN):</td>
+                                        <td>ДАНЪЧНА ОСНОВА (BGN):</td>
                                         <td id="totalPrice"></td>
                                     </tr>
                                     <tr>
@@ -154,10 +143,19 @@
                                     </tr>
                                     </tbody>
                                 </table>
+                                <label>БАНКОВА СМЕТКА:
+                                    <strong>BG56 UNCR 7000 1523215088 УНИКРЕДИТ БУЛБАНК АД BIC:UNCRBGSF</strong>
+                                </label><br>
+
+                                <label>Начин на плащане:
+                                    <span th:if="${invoiceDTO.isCashPayment}"><strong>Брой</strong> </span>
+                                    <span th:unless="${invoiceDTO.isCashPayment}"><strong>С Преводно Нареждане</strong></span>
+                                </label><br>
+                                <label>Дата на падеж: <strong><span th:text="${#temporals.format(invoiceDTO.deadline, 'dd.MM.yyyy')}"></span></strong></label><br><br>
                                 <label>
                                     <strong>СЪГЛАСНО ЧЛ. 7, АЛ. 1 ОТ ЗАКОНА ЗА СЧЕТОВОДСТВОТО, ЧЛ. 114 ОТ ЗДДС И ЧЛ.
                                         78 ОТ ИИЗДДС, ПЕЧАТЪТ И ПОДПИСЪТ НЕ СА ЗАДЪЛЖИТЕЛЕН РЕКВИЗИТ</strong>
-                                </label>
+                                </label><br>
                             </div>
                         </div>
                     </div>
@@ -167,5 +165,5 @@
     </div>
 </div>
 </body>
-<script src="/js/invoice.js"></script>
+<script src="/js/invoiceId.js"></script>
 </html>
